fixed marquee crashing and made tags smaller on mobile

--- a/styles.css
+++ b/styles.css
@@ -478,19 +478,30 @@ a{
     height: auto;
     justify-content: flex-start;
     align-items: flex-start;
-    margin-bottom: var(--spacing-64);
+    margin-bottom: var(--spacing-48);
     gap: var(--spacing-48);
   }
 
   .diet-icon{
-    height: 21px;
-    width: 21px;
+    height: 18px;
+    width: 18px;
   }
+
+  .diet-container{
+    gap: 12px;
+  }
+
+  
+  .diet-flex{
+    font-size: 0.875rem;
+    padding: 6px 10px 6px 12px;
+  }
+
 
   .right {
     width: 100%;
     height: 480px;
-    overflow: hidden;
+    /* overflow: hidden; */
     flex-direction: column;
   }
 
@@ -519,6 +530,7 @@ a{
     display: block;
   
   }
+
 
   .join-form {
     width: 100%;
